# cpp-vapory

./: .gitmodules  .travis.yml  CMakeLists.txt  CODING_STYLE.md  CONTRIBUTING.md  CodingStandards.txt  README.md  appveyor.yml  circle.yml  codecov.yml  snapcraft.yaml
cmake/: UseMhd.cmake  UseMiniupnpc.cmake  VapBuildInfo.cmake  VapCompilerSettings.cmake  VapDependencies.cmake  VapExecutableHelper.cmake  VapOptions.cmake  VapPolicy.cmake  VapUtils.cmake
doc/: Doxyfile  database_layout.rst  dependencies.rst  generating_tests.rst  snapshot_sync.rst  usingtesteth.rst
eth/: CMakeLists.txt  main.cpp
homebrew/: INSTALL_RECEIPT.json  fix_homebrew_paths_in_standalone_zip.py  homebrew.mxcl.cpp-ethereum.plist  prepare_receipt.sh
libdevcore/: Address.cpp  Address.h  Assertions.h  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.cpp  CommonJS.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.cpp  Guards.h  JsonUtils.cpp  JsonUtils.h  Log.cpp  Log.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  RLP.cpp  RLP.h  RangeMask.h  SHA3.cpp  SHA3.h  Terminal.h  TransientDirectory.cpp  TransientDirectory.h  TrieCommon.cpp  TrieCommon.h  TrieDB.h  TrieHash.cpp  TrieHash.h  UndefMacros.h  (+5 more)
libdevcrypto/: AES.cpp  AES.h  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  Exceptions.h  Hash.cpp  Hash.h  LibSnark.cpp  LibSnark.h  SecretStore.cpp  SecretStore.h
libp2p/: CMakeLists.txt  Capability.cpp  Capability.h  Common.cpp  Common.h  Host.cpp  Host.h  HostCapability.cpp  HostCapability.h  Network.cpp  Network.h  NodeTable.cpp  NodeTable.h  Peer.cpp  Peer.h  RLPXFrameCoder.cpp  RLPXFrameCoder.h  RLPXFrameReader.cpp  RLPXFrameReader.h  RLPXFrameWriter.cpp  RLPXFrameWriter.h  RLPXPacket.h  RLPXSocket.h  RLPXSocketIO.cpp  RLPXSocketIO.h  RLPxHandshake.cpp  RLPxHandshake.h  Session.cpp  Session.h  UDP.cpp  UDP.h  UPnP.cpp  UPnP.h
libvapash/: CMakeLists.txt  endian.h  fnv.h  internal.c  internal.h  io.c  io.h  io_posix.c  io_win32.c  util.c
libvapashseal/: CMakeLists.txt  GenesisInfo.cpp  GenesisInfo.h  Vapash.cpp  Vapash.h  VapashAux.cpp  VapashAux.h  VapashCPUMiner.cpp  VapashCPUMiner.h  VapashClient.cpp  VapashClient.h  VapashProofOfWork.cpp  VapashProofOfWork.h
libvapcore/: BasicAuthority.cpp  BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  CommonJS.cpp  CommonJS.h  Exceptions.h  KeyManager.cpp  KeyManager.h  LogEntry.cpp  LogEntry.h  Precompiled.cpp  (+8 more)
libvvm/: CMakeLists.txt  ExtVMFace.cpp  ExtVMFace.h  HeraPlusVM.cpp  HeraPlusVM.h  Instruction.cpp  Instruction.h  JitVM.cpp  JitVM.h  SmartVM.cpp  SmartVM.h  VM.cpp  VM.h  VMCalls.cpp  VMConfig.h  VMFace.h  VMFactory.cpp  VMFactory.h  VMOpt.cpp  VMSIMD.cpp  VMValidate.cpp  VVMC.cpp  VVMC.h
libweb3jsonrpc/: AccountHolder.cpp  AccountHolder.h  AdminNet.cpp  AdminUtils.cpp  AdminVap.cpp  AdminVap.h  AdminVapFace.h  CMakeLists.txt  Debug.cpp  Debug.h  IpcServer.h  IpcServerBase.cpp  IpcServerBase.h  JsonHelper.cpp  JsonHelper.h  ModularServer.h  Net.cpp  Net.h  Personal.cpp  Personal.h  SafeHttpServer.cpp  SafeHttpServer.h  Test.cpp  Test.h  UnixSocketServer.cpp  UnixSocketServer.h  Vap.cpp  Vap.h  VapFace.h  Web3.cpp  Web3.h  Whisper.cpp  Whisper.h  WinPipeServer.cpp  WinPipeServer.h  admin_vap.json  vap.json
test/: CMakeLists.txt
test/tools/fuzzTesting/: BoostRandomCode.cpp  BoostRandomCode.h  RandomCode.h  createRandomTest.cpp  fuzzHelper.cpp  fuzzHelper.h
test/tools/jsontests/: BlockChainTests.cpp  BlockChainTests.h  StateTests.cpp  StateTests.h  TransactionTests.cpp  TransactionTests.h  vm.cpp  vm.h
test/tools/libtesteth/: BlockChainHelper.cpp  FillJsonFunctions.cpp  ImportTest.cpp  ImportTest.h  Options.cpp  Stats.cpp  Stats.h  TestHelper.cpp  TestHelper.h  TestOutputHelper.cpp  TestOutputHelper.h  TestSuite.h  TestUtils.h  boostTest.cpp  wast2wasm.cpp
test/tools/libtestutils/: BlockChainLoader.cpp  BlockChainLoader.h  Common.cpp  Common.h  FixedClient.cpp  FixedClient.h  TestLastBlockHashes.h
test/tools/libtestvap/: BlockChainHelper.cpp  BlockChainHelper.h  FillJsonFunctions.cpp  ImportTest.cpp  ImportTest.h  JsonSpiritHeaders.h  Options.cpp  Options.h  Stats.h  TestHelper.cpp  TestHelper.h  TestOutputHelper.cpp  TestOutputHelper.h  TestSuite.cpp  TestSuite.h  TestUtils.cpp  TestUtils.h  boostTest.cpp
test/unittests/external-dependencies/: boost.cpp
test/unittests/libdevcore/: CommonJS.cpp  FixedHash.cpp  RangeMask.cpp  core.cpp  rlp.cpp
test/unittests/libdevcrypto/: AES.cpp  LibSnark.cpp  MemTrie.cpp  MemTrie.h  SecretStore.cpp  crypto.cpp  hexPrefix.cpp  trie.cpp
test/unittests/libethashseal/: EthashTest.cpp
test/unittests/libethcore/: PrecompiledTest.cpp  SealEngineTest.cpp  commonjs.cpp  dagger.cpp  difficulty.cpp  keymanager.cpp
test/unittests/libethereum/: Block.cpp  BlockChain.cpp  BlockChainInsert.cpp  BlockQueue.cpp  ClientBase.cpp  EthereumPeerTest.cpp  ExtVMTest.cpp  GasPricer.cpp  Genesis.cpp  SnapshotImporterTest.cpp  StateUnitTests.cpp  Transaction.cpp  TransactionQueue.cpp
test/unittests/libp2p/: capability.cpp  eip-8.cpp  net.cpp  peer.cpp  rlpx.cpp
test/unittests/libtesteth/: blockchainTest.cpp
test/unittests/libtestvap/: blockchainTest.cpp
test/unittests/libvapashseal/: VapashTest.cpp
test/unittests/libvapcore/: PrecompiledTest.cpp  SealEngineTest.cpp  commonjs.cpp  dagger.cpp  difficulty.cpp  keymanager.cpp
test/unittests/libvapory/: Block.cpp  BlockChain.cpp  BlockChainInsert.cpp  BlockQueue.cpp  ClientBase.cpp  ExtVMTest.cpp  GasPricer.cpp  Genesis.cpp  SnapshotImporterTest.cpp  StateUnitTests.cpp  Transaction.cpp  TransactionQueue.cpp  VaporyPeerTest.cpp
test/unittests/libweb3core/: memorydb.cpp  overlaydb.cpp
test/unittests/libweb3jsonrpc/: AccountHolder.cpp  Client.cpp  WebThreeStubClient.h  jsonrpc.cpp
test/unittests/libwhisper/: bloomFilter.cpp  whisperMessage.cpp
test/unittests/performance/: README  parity-tests.sh  tests.mk
vap/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  MinerAux.h  main.cpp
(+149 files in other folders)
